# max7219-led-matrix

./: .gitignore  CMakeLists.txt  README.md  toolchain.cmake
include/peripherals/: max7219_led_matrix.h  sysclk.h
src/: CMakeLists.txt  linker_script.ld  main.c  startup.c
src/peripherals/: CMakeLists.txt  max7219_led_matrix.c  sysclk.c
